--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@vercel/postgres": "^0.7.2",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
